--- a/HealthR/Web/HealthR.Web/Views/_ViewImports.cshtml
+++ b/HealthR/Web/HealthR.Web/Views/_ViewImports.cshtml
@@ -5,4 +5,6 @@
 @using HealthR.Web.Models.ManageViewModels
 @using HealthR.Data.Models
 @using HealthR.Web.ViewModels.Schedule
+@using HealthR.Web
+@using HealthR.Web.Infrastructure.Exstensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
