--- a/HealthR/Web/HealthR.Web/Views/_ViewImports.cshtml
+++ b/HealthR/Web/HealthR.Web/Views/_ViewImports.cshtml
@@ -7,4 +7,6 @@
 @using HealthR.Web.ViewModels.Schedule
 @using HealthR.Web
 @using HealthR.Web.Infrastructure.Exstensions
+@using HealthR.Services.Data.Models
+@using HealthR.Web.ViewModels.Users;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
